--- a/views/document.html
+++ b/views/document.html
@@ -25,6 +25,7 @@
 
         </tbody>
     </table>
+    <input type="button" value="新增" id="createdocumentBtn">
     <div id="demo1" class="pagination" style="position: absolute;bottom: -70px;left: 150px;"></div>
 </div>
 <div class="modal fade" tabindex="-1" role="dialog">
