--- a/ecmascript/mouse-event/index.css
+++ b/ecmascript/mouse-event/index.css
@@ -1,20 +1,20 @@
 body{
-    margin: 0;
-    padding: 0;
-    /*width: 100vw;*/
-    /*height: 100vh;*/
+    margin:0;
+    padding:0;
+    width:100vw;
+    height:100vh;
 }
 .container{
-    width: 100px;
-    height: 100px;
+    width:100px;
+    height:100px;
     background:black;
-    position: relative;
-    top: 5px;
-    left: 5px;
+    position:relative;
+    top:5px;
+    left:5px;
 }
 .container .pin{
-    width:5px;
-    height:5px;
+    width:10px;
+    height:10px;
     border-radius:50%;
     background:red;
     position:absolute;
@@ -22,21 +22,20 @@ body{
 .container .pin:nth-child(1){
     left:-5px;
     top:-5px;
-    cursor: nw-resize;
+    cursor:nw-resize;
 }
 .container .pin:nth-child(2){
-    right: -5px;
+    right:-5px;
     top:-5px;
-    cursor: ne-resize;
+    cursor:ne-resize;
 }
 .container .pin:nth-child(3){
-    bottom: -5px;
-    left: -5px;
-    cursor:ne-resize;
-
+    right:-5px;
+    bottom:-5px;
+    cursor:nw-resize;
 }
 .container .pin:nth-child(4){
-    bottom: -5px;
-    right: -5px;
-    cursor:nw-resize;
+    left:-5px;
+    bottom:-5px;
+    cursor:ne-resize;
 }
